--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:titleTextAppearance="@style/Toolbar.TitleText"
     android:background="@color/colorPrimary"
-    app:titleTextColor="@android:color/white"
+    android:elevation="4dp"
     app:title="Ma réunion"
-    android:elevation="4dp">
+    app:titleTextAppearance="@style/Toolbar.TitleText"
+    app:titleTextColor="@android:color/white">
 
 </androidx.appcompat.widget.Toolbar>
